2009-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppResultsSetp.{h,cpp}: Added simple single SEXP return
	* src/RcppCommon.{h,cpp}: Adding simple logging facility

2009-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppInline.R: Another improvement for Rcpp use
        * inst/examples/RcppInline/RcppSimpleExamples.r: Another simple case

2009-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppInline.R: Improved / simplified in light of getting it to
 	  work on Windoze too so switched to setting env var explicitly;
	  also split into three args for CPPFLAGS, CXXFLAGS and LIBS
	* man/RcppInline.Rd: Updated accordingly to reflect new args
        * inst/examples/RcppInline/RcppInlineWithLibsExamples.r: Idem

2009-12-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppSexp.{h,cpp}: Added simple RcppSexp class for simple
	  conversion from and to single-element SEXPs -- currently limited
	  to int, double, std::string
	* inst/examples/RcppInline/RcppSexpTests.r: Simple tests for this

2009-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: License changed to 'GPL (>= 2)'
	* COPYING: Changed from LGPL 2.1 to GPL 2 (or later)
	* src/*.{h,cpp}: Relicensed under GPL 2 (or later)

2009-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppInline.R: Extended to for additional header and library
	  arguments so that we can work with arbitrary other projects
	* man/RcppInline.Rd: Added documentation for these arguments
        * inst/examples/RcppInline/RcppInlineWithLibsExamples.r: New
	  examples using GNU GSL to show how to compile + link via inline

2009-12-11  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppInline.R: Imported function 'cfunction' from the inline
  	  package, along with small patch to directly support Rcpp. The
	  inclusion may be temporary -- if our patch is integrated into
	  inline we may just depend on that package
        * man/RcppInline.Rd: Imported from inline, plus change for Rcpp