@@ -1,4 +1,4 @@
-#!/usr/bin/r
+#!/usr/bin/r -t
 
 suppressMessages(library(Rcpp))
 
@@ -25,7 +25,6 @@ funx <- cfunction(signature(x="numeric"), foo, Rcpp=TRUE, verbose=FALSE)
 cat(funx(x=2), "\n")
 cat(funx(x=2.2), "\n")
 
-
 cat("\n===String\n")
 foo <- '
         std::string s = RcppSexp(x).asStdString();
@@ -35,3 +34,60 @@ foo <- '
 funx <- cfunction(signature(x="character"), foo, Rcpp=TRUE, verbose=FALSE)
 cat(funx(x="abc"), "\n")
 
+cat("\n===Int Vector via RcppResultSet.getSEXP\n")
+foo <- '
+        std::vector<int> iv = RcppSexp(x).asStdVectorInt();
+	std::cout << "Returning twice the value of vector : ";
+        for (size_t i=0; i<iv.size(); i++) {
+            iv[i] = 2*iv[i];
+        }
+        RcppResultSet rs;
+        rs.add("", iv);
+        return(rs.getSEXP());
+        '
+funx <- cfunction(signature(x="numeric"), foo, Rcpp=TRUE, verbose=FALSE)
+print(funx(x=2:5))
+
+## does not work
+#cat("\n===Int Vector\n")
+#foo <- '
+#        std::vector<int> iv = RcppSexp(x).asStdVectorInt();
+#	std::cout << "Returning twice the value of vector : ";
+#        for (size_t i=0; i<iv.size(); i++) {
+#            iv[i] = 2*iv[i];
+#        }
+#        RcppSexp t = RcppSexp( iv );
+#	return(t.asSexp());
+#        '
+#funx <- cfunction(signature(x="numeric"), foo, Rcpp=TRUE, verbose=FALSE)
+#print(funx(x=2:5))
+
+
+cat("\n===Double Vector via RcppResultSet.getSEXP\n")
+foo <- '
+        std::vector<double> iv = RcppSexp(x).asStdVectorDouble();
+	std::cout << "Returning twice the value of vector : ";
+        for (size_t i=0; i<iv.size(); i++) {
+            iv[i] = 2*iv[i];
+        }
+        RcppResultSet rs;
+        rs.add("", iv);
+        return(rs.getSEXP());
+        '
+funx <- cfunction(signature(x="numeric"), foo, Rcpp=TRUE, verbose=FALSE)
+print(funx(x=0.1+2:5))
+
+
+cat("\n===String Vector via RcppResultSet.getSEXP\n")
+foo <- '
+        std::vector<std::string> iv = RcppSexp(x).asStdVectorString();
+	std::cout << "Returning twice the value of vector : ";
+        for (size_t i=0; i<iv.size(); i++) {
+            iv[i] = iv[i] + iv[i];
+        }
+        RcppResultSet rs;
+        rs.add("", iv);
+        return(rs.getSEXP());
+        '
+funx <- cfunction(signature(x="character"), foo, Rcpp=TRUE, verbose=FALSE)
+print(funx(x=c("foo", "bar")))
