@@ -1,7 +1,10 @@
 2009-12-19  Dirk Eddelbuettel  <edd@debian.org>
 
+	* src/RcppSexp.{h,cpp}: Added converters for vectors of
+	  int, double, and std::string vectors
 	* src/RcppResultsSetp.{h,cpp}: Added simple single SEXP return
 	* src/RcppCommon.{h,cpp}: Adding simple logging facility
+	* inst/examples/RcppInline/RcppSexpTests.r: expanded for new types
 
 2009-12-18  Dirk Eddelbuettel  <edd@debian.org>
 
